adicionei folha de estilo e fiz modificações para estilização

--- a/Fundamentos Web/Atividade1/index.html
+++ b/Fundamentos Web/Atividade1/index.html
@@ -1,32 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Perfil</title>
-</head>
-<body>
-
-    <ul>
-        <li> <a href="index.html">Home</a> </li>
-        <li><a href="contato.html">Contato</a></li>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <ul id="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="contato.html">Contato</a></li>
     </ul>
 
-    <h1>Sobre Bárbara</h1>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis quis totam earum corrupti cum esse dicta fugit itaque laudantium voluptas, inventore quos mollitia aperiam provident doloremque unde ea. Blanditiis, atque.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos numquam optio aperiam porro veniam odit, alias dicta eum, distinctio sit culpa quod inventore ipsam? Quaerat id unde at corrupti impedit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos numquam optio aperiam porro veniam odit, alias dicta eum, distinctio sit culpa quod inventore ipsam? Quaerat id unde at corrupti impedit!
-    </p>
-    <P>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos numquam optio aperiam porro veniam odit, alias dicta eum, distinctio sit culpa quod inventore ipsam? Quaerat id unde at corrupti impedit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos numquam optio aperiam porro veniam odit, alias dicta eum, distinctio sit culpa quod inventore ipsam? Quaerat id unde at corrupti impedit!
-    </p>
+    <h1 class="center">Sobre Bárbara</h1>
+    <div class="container">
+      <div>
+        <img
+          class="img"
+          src="https://jconlineimagem.ne10.uol.com.br/imagem/noticia/2019/10/12/normal/f438afa47e5b16bcd92fdf8e3c770da8.jpg"
+          alt="Foto de perfil"
+        />
+      </div>
+      <div>
+        <p class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis
+          quis totam earum corrupti cum esse dicta fugit itaque laudantium
+          voluptas, inventore quos mollitia aperiam provident doloremque unde
+          ea. Blanditiis, atque.Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Quos numquam optio aperiam porro veniam odit, alias
+          dicta eum, distinctio sit culpa quod inventore ipsam? Quaerat id unde
+          at corrupti impedit! Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Quos numquam optio aperiam porro veniam odit, alias
+          dicta eum, distinctio sit culpa quod inventore ipsam? Quaerat id unde
+          at corrupti impedit!
+        </p>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos numquam
+          optio aperiam porro veniam odit, alias dicta eum, distinctio sit culpa
+          quod inventore ipsam? Quaerat id unde at corrupti impedit! Lorem ipsum
+          dolor sit amet consectetur, adipisicing elit. Quos numquam optio
+          aperiam porro veniam odit, alias dicta eum, distinctio sit culpa quod
+          inventore ipsam? Quaerat id unde at corrupti impedit!
+        </p>
+      </div>
+    </div>
+    <h2 class="center">Meu vídeo predileto:</h2>
+    <div class="container" class="mb-50">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/duiOX7aYDPs"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <!--pedaço de site dentro-->
+    </div>
 
-    <img src="https://diariodonordeste.verdesmares.com.br/image/contentid/policy:1.2135168:1590238106/image.jpg?h=630&q=0.6&w=1200&$p$h$q$w=f76cc5e.jpg" alt="Foto de perfil">
-
-    <h2>Meu vídeo predileto: </h2>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/duiOX7aYDPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        <!--pedaço de site dentro-->
-
-    
-</body>
+    <footer>
+      <div class="container">
+        <a href="https://www.linkedin.com/in/barbara-salla/" target="_blank">
+          <img class="tm" src="linkedin.png" alt="Logo do Linkedin" />
+        </a>
+      </div>
+      <p class="center">Todos os direitos reservados: Bárbara Salla &copy;</p>
+    </footer>
+  </body>
 </html>
