--- a/Fundamentos Web/Atividade1/contato.html
+++ b/Fundamentos Web/Atividade1/contato.html
@@ -1,37 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <ul>
-        <li> <a href="index.html">Home</a> </li>
+  </head>
+
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="contato.html">Contato</a></li>
-    </ul>
+      </ul>
+      </nav>
+
+    <main>
     <h1>Entre em contato comigo</h1>
 
-    <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome"><br><br>
+    <section class="contato">
+      <form>
+          <label for="nome">Nome:</label></br>
+          <input type="text" id="nome" onkeyup='validarNome()'/><br/><br/>
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email"><br><br>
+          <label for="email">E-mail:</label></br>
+          <input type="email" id="email" /><br /><br />
 
-        <label for="assunto">E-mail:</label> 
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-        <br><br>
-        <button>Enviar</button>
-    </form>
-    
-    <h2>Endereço:</h2>
+          <label for="assunto">E-mail:</label></br>
+          <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+          <br /><br />
+          <button>Enviar</button>
+      </form>
 
-    <p>Av.Sabino Pinto, xxx</p>
-    <p>Recife - PE</p>
-
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.5808524624795!2d-34.88014674916884!3d-8.068458008121347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1906e496c77d%3A0xb1c58a6430684b12!2sFarm%C3%A1cia%20Dr%20Sabino%20Pinho!5e0!3m2!1spt-BR!2sbr!4v1652992391164!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-
-</body>
+      <div>
+        <h2>Endereço:</h2>
+        <p>Av.Sabino Pinto, xxx</p>
+        <p>Recife - PE</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.5808524624795!2d-34.88014674916884!3d-8.068458008121347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1906e496c77d%3A0xb1c58a6430684b12!2sFarm%C3%A1cia%20Dr%20Sabino%20Pinho!5e0!3m2!1spt-BR!2sbr!4v1652992391164!5m2!1spt-BR!2sbr"
+          width="400"
+          height="250"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <a href="https://www.linkedin.com/in/barbara-salla/" target="_blank">
+      <img class="tm" src="/imgs/linkedin.png" alt="Logo do Linkedin" />
+    </a>
+    <p class="center">Todos os direitos reservados: <span>Bárbara Salla &copy; - 2022</span> </p>
+  </footer>
+  <script src="/script/script.js"></script>
+  </body>
 </html>
