atualizações contato.html, index.htlm e style.css

--- a/Fundamentos Web/Atividade1/index.html
+++ b/Fundamentos Web/Atividade1/index.html
@@ -50,9 +50,9 @@
 
     <footer>
       <a href="https://www.linkedin.com/in/barbara-salla/" target="_blank">
-        <img class="tm" src="/imgs/linkedin.png" alt="Logo do Linkedin" />
+        <img src="/imgs/linkedin.png" alt="Logo do Linkedin" />
       </a>
-      <p class="center">Todos os direitos reservados: <span>Bárbara Salla &copy; - 2022</span> </p>
+      <p>Todos os direitos reservados: <span>Bárbara Salla &copy; - 2022</span> </p>
     </footer>
     <script src="/script/script.js"></script>
   </body>
