--- a/Fundamentos Web/Atividade1/contato.html
+++ b/Fundamentos Web/Atividade1/contato.html
@@ -11,8 +11,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contato.html" class="active">Contato</a></li>
       </ul>
       </nav>
 
@@ -22,7 +22,7 @@
     <section class="contato">
       <form>
           <label for="nome">Nome:</label></br>
-          <input type="text" id="nome" onkeyup='validarNome()'/><br/><br/>
+          <input type="text" id="nome" onkeyup='validarNome()' required/><br/><br/>
 
           <label for="email">E-mail:</label></br>
           <input type="email" id="email" /><br /><br />
@@ -50,9 +50,9 @@
   </main>
   <footer>
     <a href="https://www.linkedin.com/in/barbara-salla/" target="_blank">
-      <img class="tm" src="/imgs/linkedin.png" alt="Logo do Linkedin" />
+      <img src="/imgs/linkedin.png" alt="Logo do Linkedin" />
     </a>
-    <p class="center">Todos os direitos reservados: <span>Bárbara Salla &copy; - 2022</span> </p>
+    <p>Todos os direitos reservados: <span>Bárbara Salla &copy; - 2022</span> </p>
   </footer>
   <script src="/script/script.js"></script>
   </body>
