--- a/Fundamentos Web/Atividade1/contato.html
+++ b/Fundamentos Web/Atividade1/contato.html
@@ -21,30 +21,22 @@
 
     <section class="contato">
       <form>
-          <label for="nome">Nome:</label></br>
-          <input type="text" id="nome" onkeyup='validarNome()' required/><br/><br/>
+          <label for="name">Nome:</label></br>
+          <input type="text" id="name" onkeyup='validarNome()'/><div id='txtName'></div><br/>
 
           <label for="email">E-mail:</label></br>
-          <input type="email" id="email" /><br /><br />
+          <input type="email" id="email" onkeyup='validarEmail()'/><div id='txtEmail'></div><br/>
 
-          <label for="assunto">E-mail:</label></br>
-          <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-          <br /><br />
-          <button>Enviar</button>
+          <label for="assunto">Assunto:</label></br>
+          <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup='validarAssunto()'></textarea><div id="txtAssunto"></div><br/>
+          <button onclick='enviar()'>Enviar</button>
       </form>
 
       <div>
         <h2>Endereço:</h2>
         <p>Av.Sabino Pinto, xxx</p>
         <p>Recife - PE</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.5808524624795!2d-34.88014674916884!3d-8.068458008121347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1906e496c77d%3A0xb1c58a6430684b12!2sFarm%C3%A1cia%20Dr%20Sabino%20Pinho!5e0!3m2!1spt-BR!2sbr!4v1652992391164!5m2!1spt-BR!2sbr"
-          width="400"
-          height="250"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.5808524624795!2d-34.88014674916884!3d-8.068458008121347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1906e496c77d%3A0xb1c58a6430684b12!2sFarm%C3%A1cia%20Dr%20Sabino%20Pinho!5e0!3m2!1spt-BR!2sbr!4v1652992391164!5m2!1spt-BR!2sbr" width="400" height="250" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id='map' onmousemove="zoomMap()" onmouseout='normalMap()'></iframe>
       </div>
     </section>
   </main>
